istio/microsservices/app/banking/account/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-api
  namespace: account
  labels:
    app: account-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-api
      version: v1
  template:
    metadata:
      labels:
        app: account-api
        version: v1
    spec:
      serviceAccountName: account-api
      containers:
        - name: account-api
          image: lucasgsousa/apps-banking-account:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            runAsUser: 1000
