istio/microsservices/app/banking/account/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-api
  namespace: account
  labels:
    app: account-api
    service: account-api
spec:
  ports:
    - port: 3000
  selector:
    app: account-api
