istio/microsservices/app/banking/account/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-db
  namespace: account
  labels:
    app: account-db
    service: account-db
spec:
  ports:
    - port: 5432
  selector:
    app: account-db
