istio/microsservices/app/banking/account/api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: account-api-ingress
  namespace: account
spec:
  rules:
    - host: banking.com
      http:
        paths:
          - path: /account/api/v1
            pathType: Prefix
            backend:
              service:
                name: account-api
                port:
                  number: 3000
